--- a/README
+++ b/README
@@ -1,5 +1,7 @@
-# helluvacapybara
+To serve as artifacts to prove this Github is the original helluvacapybara and Dendirn.
 This repository contains verified digital artifacts for the 'helluvacapybara' mystery. 
-- Primary User: helluvacapybara (Reddit)
-- Key Dates: Nov 2009 (Account Start), Aug 2010 (Beta), Dec 2010 (Cataclysm).
-- Status: Historical Archive / Verified Evidence.
+The purpose of this is to debunk any claims to the story and any claims of a token or coin being generated in my name. 
+ALL TOKENS/COINS/PROMOTIONS AT NOT FROM ME AND ARE SELF Serving to the Issuer, Creator and/or Promoter FOR MONETARY GAIN.  READ FAQ PAGE. 
+- Helluvacapybara (Eve Online)
+- Dendirn ( World of Warcraft)
+- Key Dates: Nov 2009 (Account Start), Aug 2010 (Beta), Dec 2010 (Cataclysm). (see screenshots)
