--- a/README
+++ b/README
@@ -5,3 +5,5 @@ ALL TOKENS/COINS/PROMOTIONS AT NOT FROM ME AND ARE SELF Serving to the Issuer, C
 - Helluvacapybara (Eve Online)
 - Dendirn ( World of Warcraft)
 - Key Dates: Nov 2009 (Account Start), Aug 2010 (Beta), Dec 2010 (Cataclysm). (see screenshots)
+I might sign a message as proof, but I’m not committing to it yet.
+I’m not interested in doxxing myself or turning this into a circus.
